Port to Keycloak 26.2.5
Build against Keycloak 26.2.5 and google-api-client 2.9.1 (JDK 17). The
Apache HttpClient transport is excluded from the shadow jar so it cannot
shadow the copy Keycloak ships; only the java.net transport is used.

The identity provider now shares one GooglePublicKeysManager across
instances (Google's signing keys are fetched and cached once instead of
per request), requires the token's email to be verified by Google,
honours the hosted-domain setting like the browser flow does, and maps
a malformed JWS (IllegalArgumentException from the Google library) to
400 invalid_token instead of an uncaught 500.

Unit tests cover every branch of the id-token path; the docker compose
file boots Keycloak 26.2.5 with the same token-exchange features used in
production, and scripts/gradlew-docker.sh builds without a local JDK.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Su1acLueN6iR2w3b9wevyd